--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--42148537\testng-customsuite.xml</span>
+                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1254083502\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -116,6 +116,16 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
@@ -141,19 +151,19 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
-                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
+                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [Tomato]
+                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [Tomato] but found [Beetroot]
 	at org.testng.Assert.fail(Assert.java:110)
 	at org.testng.Assert.failNotEquals(Assert.java:1413)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
 	at org.testng.Assert.assertEquals(Assert.java:131)
 	at org.testng.Assert.assertEquals(Assert.java:655)
 	at org.testng.Assert.assertEquals(Assert.java:665)
-	at stepDefinitions.offerStepDef.user_check_if_the_product_exists(offerStepDef.java:55)
-	at ✽.User check if the product exists(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/Offer.feature:12)
+	at stepDefinitions.shoppingStepDef.user_exctract_the_actual_name_of_the_product(shoppingStepDef.java:44)
+	at ✽.User exctract the actual name of the product(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/shopping.feature:7)
 
 </div> <!-- stack-trace -->
                   <em>
@@ -170,6 +180,26 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
                   </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
                   <span class="method-name">runScenario</span>
@@ -183,7 +213,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--42148537\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1254083502\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -240,20 +270,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'testRunner.TestNGTestRunner')
-data.setCell(0, 3, 10353);
+data.setCell(0, 3, 7674);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'testRunner.TestNGTestRunner')
-data.setCell(1, 3, 6748);
+data.setCell(1, 3, 6362);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'testRunner.TestNGTestRunner')
+data.setCell(2, 3, 4350);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'runScenario')
+data.setCell(3, 2, 'testRunner.TestNGTestRunner')
+data.setCell(3, 3, 4287);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -281,22 +319,30 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testRunner.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@4c1d59cd)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@422ab737)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
-                <span class="method-start">196 ms</span>
+                <span class="method-start">218 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">7895 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">10551 ms</span>
+                <span class="method-start">14258 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
+                <span class="method-start">18546 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">17301 ms</span>
+                <span class="method-start">22899 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
