--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1254083502\testng-customsuite.xml</span>
+                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1187002856\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
+                    <span class="method-stats">5 methods, 2 failed,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -118,12 +123,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User increments his product quantity&quot;, &quot;Placing Order&quot;)">runScenario("User increments his product quantity", "Placing Order")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -151,19 +156,40 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
-                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [Tomato] but found [Beetroot]
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [No data]
 	at org.testng.Assert.fail(Assert.java:110)
 	at org.testng.Assert.failNotEquals(Assert.java:1413)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
 	at org.testng.Assert.assertEquals(Assert.java:131)
 	at org.testng.Assert.assertEquals(Assert.java:655)
 	at org.testng.Assert.assertEquals(Assert.java:665)
-	at stepDefinitions.shoppingStepDef.user_exctract_the_actual_name_of_the_product(shoppingStepDef.java:44)
-	at ✽.User exctract the actual name of the product(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/shopping.feature:7)
+	at stepDefinitions.OfferStepDef.user_check_if_the_product_exists(OfferStepDef.java:68)
+	at ✽.User check if the product exists Beet(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/Offer.feature:12)
+
+</div> <!-- stack-trace -->
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [Tomato]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
+	at org.testng.Assert.assertEquals(Assert.java:131)
+	at org.testng.Assert.assertEquals(Assert.java:655)
+	at org.testng.Assert.assertEquals(Assert.java:665)
+	at stepDefinitions.OfferStepDef.user_check_if_the_product_exists(OfferStepDef.java:68)
+	at ✽.User check if the product exists Tom(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/Offer.feature:12)
 
 </div> <!-- stack-trace -->
                   <em>
@@ -180,20 +206,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
-                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
+                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
-                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
+                  <a name="runScenario(&quot;User increments his product quantity&quot;, &quot;Placing Order&quot;)">
+                  </a> <!-- runScenario("User increments his product quantity", "Placing Order") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <span class="parameters">("User increments his product quantity", "Placing Order")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -213,7 +239,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1254083502\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse--1187002856\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -270,28 +296,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'testRunner.TestNGTestRunner')
-data.setCell(0, 3, 7674);
+data.setCell(0, 3, 7895);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'testRunner.TestNGTestRunner')
-data.setCell(1, 3, 6362);
+data.setCell(1, 3, 7167);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'testRunner.TestNGTestRunner')
-data.setCell(2, 3, 4350);
+data.setCell(2, 3, 7139);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'testRunner.TestNGTestRunner')
-data.setCell(3, 3, 4287);
+data.setCell(3, 3, 5275);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'runScenario')
+data.setCell(4, 2, 'testRunner.TestNGTestRunner')
+data.setCell(4, 3, 5162);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 32 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -319,30 +349,36 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testRunner.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@422ab737)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@2199e845)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
-                <span class="method-start">218 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
-                <span class="method-start">7895 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">14258 ms</span>
+                <span class="method-name">runScenario("User increments his product quantity", "Placing Order")</span>
+                <span class="method-start">205 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">8103 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">15244 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">18546 ms</span>
+                <span class="method-start">22412 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
+                <span class="method-start">27688 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">22899 ms</span>
+                <span class="method-start">32852 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
